--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
     <head>
     	<!-- EPPR Clase 301 | INTRO A HTML -->
-        <title> HELLO CODERS </title>
-        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+        <title> Aprendiendo HTML BASICO </title>
+        <!-- ^^ ¿Para qué sirve este Tag?: Para poner el titulo de la página en la parte de la pestaña que aparece en el navegador -->
     </head>
     <body>
     	<!-- Primera sección -->
      	<div>
 	        <h1>CABECERAS</h1>
 	        <br/>
-	        <h1>Titulo 1</h1>
-	        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
-	        <h2>Titulo 2</h2>
-	        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
-	        <h3>Titulo 3</h3>
-	        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+	        <h1>Titulo 6</h1>
+	        <!-- ^^ ¿Para qué sirve este Tag?: Pone el texto del subtítulo en el tamaño más pequeño  -->
+	        <h2>Titulo 1</h2>
+	        <!-- ^^ ¿Para qué sirve este Tag?: Pone el texto título en tamaño grande -->
+	        <h3>Titulo 5</h3>
+	        <!-- ^^ ¿Para qué sirve este Tag?: Pone el texto del título en tamaño mas grade que el ultimo tamaño de titulo  -->
      	</div>
 		<!-- Segunda sección -->
 		<div>
-			<h1>Parrafo Normal</h1>
+			<h3>Parrafo Normal</h3>
 	        <br/>
-	        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
-	        <p> Texto con Estilo  </p>
-	        <!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+	        <!-- ^^ ¿Para qué sirve este Tag?: Sirve para un espacio de linea o un enter -->
+	        <p> Texto con Estilo de Parrafo </p>
+	        <!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner un párrafo  -->
 	        <br/>
 	        <p>
 			<strong> Negritas </strong>
-			<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+			<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner en negritas el texto que esta dentro del tag -->
 			<br/>
 			<i>Cursivas </i>
-			<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+			<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner en cursiva el texto que esta dentro del tag -->
 			<br/>
 			<a href="https://github.com/EPPR"> LINK </a>
-			<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+			<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner un link dentro de la página que nos víncula a otra página-->
 			</p>
      	</div>
 		<!-- Tercera sección -->
 		<div>
-			<h1>IFRAME</h1>
+			<h2>IFRAME</h2>
 			<br/>
 			<iframe id="inlineFrameExample"
 		    	title="Inline Frame Example"
@@ -45,33 +45,33 @@
 		    	height="200"
 		    	src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
 			</iframe>
-			<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+			<!-- ^^ ¿Para qué sirve este Tag?: para poner una página dentro de otra página -->
 		</div>
 		<!-- Formularios sección -->
 		<div>
-			<h1>Formularios</h1>
+			<h2>Formularios</h2>
 			<form>
-			<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+			<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner un formulario dentro de la página -->
 				<input type="text" />
-				<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+				<!-- ^^ ¿Para qué sirve este Tag?: Sirve para pedir un texto -->
 				<br/>
 				<textarea> Ejemplo </textarea>
-				<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+				<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner un cuadro de texto de varias lineas -->
 				<br/>
 				<select>
 					<option> A </option>
 					<option> B </option>
 					<option> C </option>
 				</select>
-				<!-- ^^ ¿Para qué sirve este Tag?: ___________ -->
+				<!-- ^^ ¿Para qué sirve este Tag?: Sirve para poner varias opciones de valores  -->
 			</form>
 		</div>
 		<!-- Sección extra para darle algo de espacio a la parte de abajo de nuestra página -->
 		<div>
-			<br/><br/><br/><br/><br/><br/><br/><br/>
+			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 		</div>
     </body>
 <!-- COMPLETA ESTOS DATOS -->
-<!-- Nombre de usuario de GitHub: ___________ -->
-<!-- Fecha de hoy: ___________ -->
+<!-- Nombre de usuario de GitHub: GClau -->
+<!-- Fecha de hoy: 13 de mayo 2021 -->
 </html>
